perf(interop): RequirementMatrix 인터롭 테스트를 컨테이너당 Docker 대신 네이티브 hg 서브프로세스로 전환
컨테이너 하나당 ~24초의 순수 Docker(macOS+Podman) start/exec/stop 오버헤드 때문에 30개 조합짜리
클래스 하나가 ~12분 걸렸다(측정 2026-09-08/09) — 전체 매트릭스(~50개 클래스)가 8~10시간 걸리던
것을, 같은 Rust 확장(mercurial.pyo3_rustext) 포함 real hg 7.2.4 CLI를 호스트에 직접 빌드해
서브프로세스로 실행하는 방식(NativeHgRust)으로 바꿔 수 분 단위로 단축.

- docker/hg-rust-7.2.4/build-native.sh 신설 — 기존 Dockerfile과 동일한 빌드를 호스트에서
  직접 수행, 결과를 .native/hg-rust-7.2.4/hg(머신별, gitignore 대상)에 둔다.
- src/test/java/io/github/search5/hg4j/api/NativeHgRust.java 신설 — 그 결과물을 호스트
  서브프로세스로 직접 실행. Docker 폴백 없음(2026-09-09 결정) — 인터롭 스위트를 돌리는
  모든 머신은 build-native.sh를 한 번 실행해뒀다고 가정하고, 없으면 isAvailable()로 클래스
  전체를 스킵한다.
- RequirementMatrix*DockerRoundTripTest 전체(약 50개 클래스)를 NativeHgRust 사용으로 전환.
- Dockerfile은 참고/수동 빌드용으로만 남기고(더 이상 인터롭 스위트가 직접 소비하지 않음)
  헤더에 그 취지를 기록.
- .gitignore에 /.native/ 추가.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rfusndHS5MCSwXyUNwLjG