@@ -1,5 +1,8 @@
 package io.github.search5.hg4j.api;
 
+import io.github.search5.hg4j.lib.HgRepository;
+import io.github.search5.hg4j.util.NodeIdUtil;
+
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
@@ -38,34 +41,10 @@ import java.util.concurrent.TimeUnit;
 @Tag("interop")
 public class RequirementMatrixAmendDockerRoundTripTest {
 
-    private static final String IMAGE = "localhost/hg-rust-7.2.4";
-    private static String hostUidGid;
-    private static boolean dockerReady = false;
-
     @BeforeAll
-    static void checkDocker() throws Exception {
-        dockerReady = isDockerAvailable() && isImageAvailable();
-        Assumptions.assumeTrue(dockerReady,
-                "Docker (or the localhost/hg-rust-7.2.4 image) is not available. Skipping the whole class.");
-        hostUidGid = runHost("id", "-u").trim() + ":" + runHost("id", "-g").trim();
-    }
-
-    private static boolean isDockerAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "info").redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
-    private static boolean isImageAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "image", "inspect", IMAGE).redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
+    static void checkNativeHgRust() {
+        Assumptions.assumeTrue(NativeHgRust.isAvailable(),
+                "Native rust-enabled hg (run docker/hg-rust-7.2.4/build-native.sh) is not built. Skipping the whole class.");
     }
 
     private static String runHost(String... cmd) throws Exception {
@@ -83,76 +62,20 @@ public class RequirementMatrixAmendDockerRoundTripTest {
         return out;
     }
 
-    @FunctionalInterface
-    private interface FreshContainerTest {
-        void run(String containerName, Path workDir) throws Exception;
-    }
-
-    private static void withFreshContainer(FreshContainerTest test) throws Exception {
-        Path workDir = Files.createTempDirectory("hg4j-docker-amend-matrix").toRealPath();
-        String containerName = "hg4j-reqmatrix-amend-" + UUID.randomUUID().toString().substring(0, 8);
-        runHost("docker", "run", "-d", "--rm", "--name", containerName,
-                "-v", workDir + ":/repo-root", IMAGE, "sleep", "infinity");
-        try {
-            Exception last = null;
-            for (int i = 0; i < 20; i++) {
-                try {
-                    runHost("docker", "exec", "--user", hostUidGid, containerName, "hg", "--version");
-                    last = null;
-                    break;
-                } catch (Exception e) {
-                    last = e;
-                    Thread.sleep(250);
-                }
-            }
-            if (last != null) {
-                throw new AssertionError("Container " + containerName + " never became ready", last);
-            }
-            test.run(containerName, workDir);
-        } finally {
-            try {
-                new ProcessBuilder("docker", "stop", containerName).redirectErrorStream(true).start().waitFor(15, TimeUnit.SECONDS);
-            } catch (Exception ignored) {
-                // best effort
-            }
-            deleteRecursively(workDir.toFile());
-        }
-    }
-
-    private static void deleteRecursively(File f) {
-        File[] children = f.listFiles();
-        if (children != null) {
-            for (File c : children) {
-                deleteRecursively(c);
-            }
-        }
-        f.delete();
-    }
-
-    private static String dockerHgIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
-    }
-
     /** Like {@link #dockerHgIn} but with {@code experimental.evolution=all} added, so a
      * post-amend repository (which always carries an obsmarker) can be queried without the
      * unrelated "obsolete feature not enabled" warning polluting the output being asserted on. */
-    private static String dockerHgEvolutionIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg", "--config", "experimental.evolution=all"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
+    private static String dockerHgEvolutionIn(Path workDir, String repoRelPath, String... args) throws Exception {
+        List<String> full = new ArrayList<>(List.of("--config", "experimental.evolution=all"));
+        full.addAll(Arrays.asList(args));
+        return NativeHgRust.hg(workDir, repoRelPath, full.toArray(new String[0]));
     }
 
     /** Runs hg4j's amend in a dedicated subprocess; returns the amended node's hex. */
     private static String amendInSubprocess(Path repoDir, String author, String message) throws Exception {
-        String javaBin = System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
-        String classpath = System.getProperty("java.class.path");
-        String out = runHost(javaBin, "-cp", classpath, RequirementMatrixAmendHelperMain.class.getName(),
-                repoDir.toString(), author, message);
-        return out.trim();
+        HgRepository repo = new HgRepository(repoDir.toFile());
+        byte[] amendedNode = new AmendCommand(repo).setAuthor(author).setMessage(message).call();
+        return NodeIdUtil.toHex(amendedNode);
     }
 
     /** One point in the Docker-only quarter of the requirement matrix -- identical generation to
@@ -224,7 +147,7 @@ public class RequirementMatrixAmendDockerRoundTripTest {
     @ParameterizedTest(name = "{0}")
     @MethodSource("combos")
     public void hg4jAmendAcrossDockerCombo(RequirementCombo combo) throws Exception {
-        withFreshContainer((containerName, workDir) -> {
+        NativeHgRust.withFreshWorkDir("hg4j-native-matrix", (workDir) -> {
             String repoRelPath = "repo";
             Path hostRepoDir = workDir.resolve(repoRelPath);
             Files.createDirectories(hostRepoDir);
@@ -234,41 +157,41 @@ public class RequirementMatrixAmendDockerRoundTripTest {
                 initArgs.add("--config");
                 initArgs.add(c);
             }
-            dockerHgIn(containerName, repoRelPath, initArgs.toArray(new String[0]));
+            NativeHgRust.hg(workDir, repoRelPath, initArgs.toArray(new String[0]));
 
             Files.writeString(hostRepoDir.resolve("base.txt"), "base\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c0 base");
-            String baseHex = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c0 base");
+            String baseHex = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("a.txt"), "one\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c1 to amend");
-            String originalHex = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c1 to amend");
+            String originalHex = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("a.txt"), "one-amended\n");
             String amendedHex = amendInSubprocess(hostRepoDir, "amender", "c1 amended");
 
-            String verify = dockerHgEvolutionIn(containerName, repoRelPath, "verify");
+            String verify = dockerHgEvolutionIn(workDir, repoRelPath, "verify");
             assertFalse(verify.toLowerCase().contains("integrity error"),
                     "real hg verify must find no integrity errors after amend for combo " + combo + ": " + verify);
 
-            String tipHex = dockerHgEvolutionIn(containerName, repoRelPath, "log", "-r", "tip", "--template", "{node}");
+            String tipHex = dockerHgEvolutionIn(workDir, repoRelPath, "log", "-r", "tip", "--template", "{node}");
             assertEquals(amendedHex, tipHex, "amended commit must be the new tip for combo " + combo);
 
-            String tipParent = dockerHgEvolutionIn(containerName, repoRelPath, "log", "-r", "tip", "--template", "{p1node}");
+            String tipParent = dockerHgEvolutionIn(workDir, repoRelPath, "log", "-r", "tip", "--template", "{p1node}");
             assertEquals(baseHex, tipParent, "amended commit must keep the original commit's own parent for combo " + combo);
 
-            String tipDesc = dockerHgEvolutionIn(containerName, repoRelPath, "log", "-r", "tip", "--template", "{desc}");
+            String tipDesc = dockerHgEvolutionIn(workDir, repoRelPath, "log", "-r", "tip", "--template", "{desc}");
             assertEquals("c1 amended", tipDesc.trim());
 
-            String catContent = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", "tip", "a.txt");
+            String catContent = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", "tip", "a.txt");
             assertEquals("one-amended", catContent.trim());
 
-            String logAll = dockerHgEvolutionIn(containerName, repoRelPath, "log", "--template", "{node} ");
+            String logAll = dockerHgEvolutionIn(workDir, repoRelPath, "log", "--template", "{node} ");
             assertFalse(logAll.contains(originalHex), "the amended-away original revision must be hidden from a plain log for combo " + combo);
 
-            String log = dockerHgEvolutionIn(containerName, repoRelPath, "log", "--template", "{rev}:{node}\n");
+            String log = dockerHgEvolutionIn(workDir, repoRelPath, "log", "--template", "{rev}:{node}\n");
             assertEquals(2, log.split("\n").length, "2 visible revisions for combo " + combo + ":\n" + log);
         });
     }
