@@ -1,5 +1,8 @@
 package io.github.search5.hg4j.api;
 
+import io.github.search5.hg4j.lib.HgRepository;
+import io.github.search5.hg4j.util.NodeIdUtil;
+
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
@@ -41,34 +44,10 @@ import java.util.concurrent.TimeUnit;
 @Tag("interop")
 public class RequirementMatrixHisteditDockerRoundTripTest {
 
-    private static final String IMAGE = "localhost/hg-rust-7.2.4";
-    private static String hostUidGid;
-    private static boolean dockerReady = false;
-
     @BeforeAll
-    static void checkDocker() throws Exception {
-        dockerReady = isDockerAvailable() && isImageAvailable();
-        Assumptions.assumeTrue(dockerReady,
-                "Docker (or the localhost/hg-rust-7.2.4 image) is not available. Skipping the whole class.");
-        hostUidGid = runHost("id", "-u").trim() + ":" + runHost("id", "-g").trim();
-    }
-
-    private static boolean isDockerAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "info").redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
-    private static boolean isImageAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "image", "inspect", IMAGE).redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
+    static void checkNativeHgRust() {
+        Assumptions.assumeTrue(NativeHgRust.isAvailable(),
+                "Native rust-enabled hg (run docker/hg-rust-7.2.4/build-native.sh) is not built. Skipping the whole class.");
     }
 
     private static String runHost(String... cmd) throws Exception {
@@ -86,80 +65,31 @@ public class RequirementMatrixHisteditDockerRoundTripTest {
         return out;
     }
 
-    @FunctionalInterface
-    private interface FreshContainerTest {
-        void run(String containerName, Path workDir) throws Exception;
-    }
-
-    private static void withFreshContainer(FreshContainerTest test) throws Exception {
-        Path workDir = Files.createTempDirectory("hg4j-docker-histedit-matrix").toRealPath();
-        String containerName = "hg4j-reqmatrix-histedit-" + UUID.randomUUID().toString().substring(0, 8);
-        runHost("docker", "run", "-d", "--rm", "--name", containerName,
-                "-v", workDir + ":/repo-root", IMAGE, "sleep", "infinity");
-        try {
-            Exception last = null;
-            for (int i = 0; i < 20; i++) {
-                try {
-                    runHost("docker", "exec", "--user", hostUidGid, containerName, "hg", "--version");
-                    last = null;
-                    break;
-                } catch (Exception e) {
-                    last = e;
-                    Thread.sleep(250);
-                }
-            }
-            if (last != null) {
-                throw new AssertionError("Container " + containerName + " never became ready", last);
-            }
-            test.run(containerName, workDir);
-        } finally {
-            try {
-                new ProcessBuilder("docker", "stop", containerName).redirectErrorStream(true).start().waitFor(15, TimeUnit.SECONDS);
-            } catch (Exception ignored) {
-                // best effort
-            }
-            deleteRecursively(workDir.toFile());
-        }
-    }
-
-    private static void deleteRecursively(File f) {
-        File[] children = f.listFiles();
-        if (children != null) {
-            for (File c : children) {
-                deleteRecursively(c);
-            }
-        }
-        f.delete();
-    }
-
-    private static String dockerHgIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
-    }
-
     /** Like {@link #dockerHgIn} but with {@code experimental.evolution=all} added, so a
      * post-histedit repository (which always carries obsmarkers) can be queried without the
      * unrelated "obsolete feature not enabled" warning polluting the output being asserted on --
      * mirrors {@code HisteditRealHgInteropTest}/{@code RequirementMatrixHisteditCoreRoundTripTest}'s
      * own {@code hgEvolution} helper. */
-    private static String dockerHgEvolutionIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg", "--config", "experimental.evolution=all"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
+    private static String dockerHgEvolutionIn(Path workDir, String repoRelPath, String... args) throws Exception {
+        List<String> full = new ArrayList<>(List.of("--config", "experimental.evolution=all"));
+        full.addAll(Arrays.asList(args));
+        return NativeHgRust.hg(workDir, repoRelPath, full.toArray(new String[0]));
     }
 
     /** Runs hg4j's histedit in a dedicated subprocess; returns the new tip node's hex. */
     private static String histeditInSubprocess(Path repoDir, String hexPick, String hexDrop, String hexKeep,
                                                 String hexFold, String hexRoll) throws Exception {
-        String javaBin = System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
-        String classpath = System.getProperty("java.class.path");
-        String out = runHost(javaBin, "-cp", classpath, RequirementMatrixHisteditHelperMain.class.getName(),
-                repoDir.toString(),
-                "PICK:" + hexPick, "DROP:" + hexDrop, "PICK:" + hexKeep, "FOLD:" + hexFold, "ROLL:" + hexRoll);
-        return out.trim();
+        HgRepository repo = new HgRepository(repoDir.toFile());
+
+        HisteditCommand cmd = new HisteditCommand(repo);
+        cmd.addRule(HisteditCommand.Action.PICK, hexPick);
+        cmd.addRule(HisteditCommand.Action.DROP, hexDrop);
+        cmd.addRule(HisteditCommand.Action.PICK, hexKeep);
+        cmd.addRule(HisteditCommand.Action.FOLD, hexFold);
+        cmd.addRule(HisteditCommand.Action.ROLL, hexRoll);
+        cmd.call();
+
+        return NodeIdUtil.toHex(repo.getDirstate().getParent1());
     }
 
     /** One point in the Docker-only quarter of the requirement matrix -- identical generation to
@@ -231,7 +161,7 @@ public class RequirementMatrixHisteditDockerRoundTripTest {
     @ParameterizedTest(name = "{0}")
     @MethodSource("combos")
     public void hg4jHisteditAcrossDockerCombo(RequirementCombo combo) throws Exception {
-        withFreshContainer((containerName, workDir) -> {
+        NativeHgRust.withFreshWorkDir("hg4j-native-matrix", (workDir) -> {
             String repoRelPath = "repo";
             Path hostRepoDir = workDir.resolve(repoRelPath);
             Files.createDirectories(hostRepoDir);
@@ -241,57 +171,57 @@ public class RequirementMatrixHisteditDockerRoundTripTest {
                 initArgs.add("--config");
                 initArgs.add(c);
             }
-            dockerHgIn(containerName, repoRelPath, initArgs.toArray(new String[0]));
+            NativeHgRust.hg(workDir, repoRelPath, initArgs.toArray(new String[0]));
 
             Files.writeString(hostRepoDir.resolve("base.txt"), "base\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c0 base");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c0 base");
 
             Files.writeString(hostRepoDir.resolve("target.txt"), "target\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c1 pick target");
-            String hexPick = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c1 pick target");
+            String hexPick = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("drop.txt"), "drop-me\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c2 dropped");
-            String hexDrop = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c2 dropped");
+            String hexDrop = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("keep.txt"), "keep\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c3 pick keep");
-            String hexKeep = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c3 pick keep");
+            String hexKeep = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("folded.txt"), "folded\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c4 fold in");
-            String hexFold = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c4 fold in");
+            String hexFold = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             Files.writeString(hostRepoDir.resolve("rolled.txt"), "rolled\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c5 roll in (message must be discarded)");
-            String hexRoll = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c5 roll in (message must be discarded)");
+            String hexRoll = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             String newTipHex = histeditInSubprocess(hostRepoDir, hexPick, hexDrop, hexKeep, hexFold, hexRoll);
 
-            String verify = dockerHgEvolutionIn(containerName, repoRelPath, "verify");
+            String verify = dockerHgEvolutionIn(workDir, repoRelPath, "verify");
             assertFalse(verify.toLowerCase().contains("integrity error"),
                     "real hg verify must find no integrity errors after histedit for combo " + combo + ": " + verify);
 
-            String message = dockerHgEvolutionIn(containerName, repoRelPath, "log", "-r", newTipHex, "--template", "{desc}");
+            String message = dockerHgEvolutionIn(workDir, repoRelPath, "log", "-r", newTipHex, "--template", "{desc}");
             assertEquals("c3 pick keep\nc4 fold in", message,
                     "fold's message must be appended to the pick's; roll's own message must be discarded for combo " + combo);
 
-            String catTarget = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", newTipHex, "target.txt");
+            String catTarget = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", newTipHex, "target.txt");
             assertEquals("target", catTarget.trim());
-            String catKeep = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", newTipHex, "keep.txt");
+            String catKeep = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", newTipHex, "keep.txt");
             assertEquals("keep", catKeep.trim());
-            String catFolded = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", newTipHex, "folded.txt");
+            String catFolded = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", newTipHex, "folded.txt");
             assertEquals("folded", catFolded.trim());
-            String catRolled = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", newTipHex, "rolled.txt");
+            String catRolled = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", newTipHex, "rolled.txt");
             assertEquals("rolled", catRolled.trim());
 
-            String logAll = dockerHgEvolutionIn(containerName, repoRelPath, "log", "--template", "{node} ");
+            String logAll = dockerHgEvolutionIn(workDir, repoRelPath, "log", "--template", "{node} ");
             assertFalse(logAll.contains(hexDrop), "dropped revision must not appear in a plain log for combo " + combo);
 
             assertFalse(Files.exists(hostRepoDir.resolve("drop.txt")),
