@@ -1,5 +1,8 @@
 package io.github.search5.hg4j.api;
 
+import io.github.search5.hg4j.lib.HgRepository;
+import io.github.search5.hg4j.util.NodeIdUtil;
+
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
@@ -41,34 +44,10 @@ import java.util.concurrent.TimeUnit;
 @Tag("interop")
 public class RequirementMatrixRebaseDockerRoundTripTest {
 
-    private static final String IMAGE = "localhost/hg-rust-7.2.4";
-    private static String hostUidGid;
-    private static boolean dockerReady = false;
-
     @BeforeAll
-    static void checkDocker() throws Exception {
-        dockerReady = isDockerAvailable() && isImageAvailable();
-        Assumptions.assumeTrue(dockerReady,
-                "Docker (or the localhost/hg-rust-7.2.4 image) is not available. Skipping the whole class.");
-        hostUidGid = runHost("id", "-u").trim() + ":" + runHost("id", "-g").trim();
-    }
-
-    private static boolean isDockerAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "info").redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
-    private static boolean isImageAvailable() {
-        try {
-            Process p = new ProcessBuilder("docker", "image", "inspect", IMAGE).redirectErrorStream(true).start();
-            return p.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
+    static void checkNativeHgRust() {
+        Assumptions.assumeTrue(NativeHgRust.isAvailable(),
+                "Native rust-enabled hg (run docker/hg-rust-7.2.4/build-native.sh) is not built. Skipping the whole class.");
     }
 
     private static String runHost(String... cmd) throws Exception {
@@ -86,78 +65,24 @@ public class RequirementMatrixRebaseDockerRoundTripTest {
         return out;
     }
 
-    @FunctionalInterface
-    private interface FreshContainerTest {
-        void run(String containerName, Path workDir) throws Exception;
-    }
-
-    private static void withFreshContainer(FreshContainerTest test) throws Exception {
-        Path workDir = Files.createTempDirectory("hg4j-docker-rebase-matrix").toRealPath();
-        String containerName = "hg4j-reqmatrix-rebase-" + UUID.randomUUID().toString().substring(0, 8);
-        runHost("docker", "run", "-d", "--rm", "--name", containerName,
-                "-v", workDir + ":/repo-root", IMAGE, "sleep", "infinity");
-        try {
-            Exception last = null;
-            for (int i = 0; i < 20; i++) {
-                try {
-                    runHost("docker", "exec", "--user", hostUidGid, containerName, "hg", "--version");
-                    last = null;
-                    break;
-                } catch (Exception e) {
-                    last = e;
-                    Thread.sleep(250);
-                }
-            }
-            if (last != null) {
-                throw new AssertionError("Container " + containerName + " never became ready", last);
-            }
-            test.run(containerName, workDir);
-        } finally {
-            try {
-                new ProcessBuilder("docker", "stop", containerName).redirectErrorStream(true).start().waitFor(15, TimeUnit.SECONDS);
-            } catch (Exception ignored) {
-                // best effort
-            }
-            deleteRecursively(workDir.toFile());
-        }
-    }
-
-    private static void deleteRecursively(File f) {
-        File[] children = f.listFiles();
-        if (children != null) {
-            for (File c : children) {
-                deleteRecursively(c);
-            }
-        }
-        f.delete();
-    }
-
-    private static String dockerHgIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
-    }
-
     /** Like {@link #dockerHgIn} but with {@code experimental.evolution=all} added, so a
      * post-rebase repository (which always carries an obsmarker) can be queried without the
      * unrelated "obsolete feature not enabled" warning polluting the output being asserted on --
      * mirrors {@code RebaseRealHgInteropTest}/{@code RequirementMatrixRebaseCoreRoundTripTest}'s
      * own {@code hgEvolution} helper. */
-    private static String dockerHgEvolutionIn(String container, String repoRelPath, String... args) throws Exception {
-        List<String> cmd = new ArrayList<>(List.of("docker", "exec", "--user", hostUidGid,
-                "-w", "/repo-root/" + repoRelPath, container, "hg", "--config", "experimental.evolution=all"));
-        cmd.addAll(Arrays.asList(args));
-        return runHost(cmd.toArray(new String[0])).trim();
+    private static String dockerHgEvolutionIn(Path workDir, String repoRelPath, String... args) throws Exception {
+        List<String> full = new ArrayList<>(List.of("--config", "experimental.evolution=all"));
+        full.addAll(Arrays.asList(args));
+        return NativeHgRust.hg(workDir, repoRelPath, full.toArray(new String[0]));
     }
 
     /** Runs hg4j's rebase in a dedicated subprocess; returns the rebased node's hex. */
     private static String rebaseInSubprocess(Path repoDir, String sourceHex, String targetHex) throws Exception {
-        String javaBin = System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
-        String classpath = System.getProperty("java.class.path");
-        String out = runHost(javaBin, "-cp", classpath, RequirementMatrixRebaseHelperMain.class.getName(),
-                repoDir.toString(), sourceHex, targetHex);
-        return out.trim();
+        byte[] sourceNode = NodeIdUtil.fromHex(sourceHex);
+        byte[] targetNode = NodeIdUtil.fromHex(targetHex);
+        HgRepository repo = new HgRepository(repoDir.toFile());
+        byte[] rebased = new RebaseCommand(repo).setSource(sourceNode).setTarget(targetNode).call();
+        return NodeIdUtil.toHex(rebased);
     }
 
     /** One point in the Docker-only quarter of the requirement matrix -- identical generation to
@@ -229,7 +154,7 @@ public class RequirementMatrixRebaseDockerRoundTripTest {
     @ParameterizedTest(name = "{0}")
     @MethodSource("combos")
     public void hg4jRebaseAcrossDockerCombo(RequirementCombo combo) throws Exception {
-        withFreshContainer((containerName, workDir) -> {
+        NativeHgRust.withFreshWorkDir("hg4j-native-matrix", (workDir) -> {
             String repoRelPath = "repo";
             Path hostRepoDir = workDir.resolve(repoRelPath);
             Files.createDirectories(hostRepoDir);
@@ -239,35 +164,35 @@ public class RequirementMatrixRebaseDockerRoundTripTest {
                 initArgs.add("--config");
                 initArgs.add(c);
             }
-            dockerHgIn(containerName, repoRelPath, initArgs.toArray(new String[0]));
+            NativeHgRust.hg(workDir, repoRelPath, initArgs.toArray(new String[0]));
 
             Files.writeString(hostRepoDir.resolve("base.txt"), "base\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c0");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c0");
 
             Files.writeString(hostRepoDir.resolve("target.txt"), "on-target\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c1 target");
-            String targetHex = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c1 target");
+            String targetHex = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
-            dockerHgIn(containerName, repoRelPath, "update", "0");
+            NativeHgRust.hg(workDir, repoRelPath, "update", "0");
             Files.writeString(hostRepoDir.resolve("source.txt"), "on-source\n");
-            dockerHgIn(containerName, repoRelPath, "add");
-            dockerHgIn(containerName, repoRelPath, "commit", "-u", "dev", "-m", "c2 source");
-            String sourceHex = dockerHgIn(containerName, repoRelPath, "log", "-r", ".", "--template", "{node}");
+            NativeHgRust.hg(workDir, repoRelPath, "add");
+            NativeHgRust.hg(workDir, repoRelPath, "commit", "-u", "dev", "-m", "c2 source");
+            String sourceHex = NativeHgRust.hg(workDir, repoRelPath, "log", "-r", ".", "--template", "{node}");
 
             String rebasedHex = rebaseInSubprocess(hostRepoDir, sourceHex, targetHex);
 
-            String verify = dockerHgEvolutionIn(containerName, repoRelPath, "verify");
+            String verify = dockerHgEvolutionIn(workDir, repoRelPath, "verify");
             assertFalse(verify.toLowerCase().contains("integrity error"),
                     "real hg verify must find no integrity errors after rebase for combo " + combo + ": " + verify);
 
-            String rebasedParent = dockerHgEvolutionIn(containerName, repoRelPath, "log", "-r", rebasedHex, "--template", "{p1node}");
+            String rebasedParent = dockerHgEvolutionIn(workDir, repoRelPath, "log", "-r", rebasedHex, "--template", "{p1node}");
             assertEquals(targetHex, rebasedParent, "rebased commit's parent must be target for combo " + combo);
 
-            String catTarget = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", rebasedHex, "target.txt");
+            String catTarget = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", rebasedHex, "target.txt");
             assertEquals("on-target", catTarget.trim());
-            String catSource = dockerHgEvolutionIn(containerName, repoRelPath, "cat", "-r", rebasedHex, "source.txt");
+            String catSource = dockerHgEvolutionIn(workDir, repoRelPath, "cat", "-r", rebasedHex, "source.txt");
             assertEquals("on-source", catSource.trim());
         });
     }
